Preliminary draft using iastate trac is reach

--- a/_includes/_navbar.html
+++ b/_includes/_navbar.html
@@ -140,7 +140,7 @@
 <div id="navs">
 
 <!-- navbar-menu -->
-<div class="navbar-menu-wrapper">
+<div class="navbar-menu-wrapper" style="padding-bottom: 0px;">
 <nav class="navbar navbar-menu navbar-default navbar-static-top no-border navbar-caps navbar-menu-affix" role="navigation">
 	<div class="container">
 		<div class="collapse navbar-collapse" id="navbar-menu-collapse">
