--- a/_includes/_postnav.html
+++ b/_includes/_postnav.html
@@ -1,6 +1,10 @@
 <!-- post-nav -->
-<div id="post-nav">
 
+<div class="jumbotron" id="logobanner">
 </div>
+
+<!-- <div class="jumbotron-fluid" id="post-nav" style="background-color: #E7E7E7; padding: 0%; display: flex; align-items: center;">
+    <span> <img src="{{ site.url }}{{ site.baseurl }}/images/logo.png" style="max-width: 40%; position: relative; left: 25%; padding-top: 0.1% ; padding-bottom: 0% ; display: flex; align-items: center; min-width: 768px">  </span>
+</div> -->
 <!-- /post-nav -->
 
