--- a/_includes/_head.html
+++ b/_includes/_head.html
@@ -16,9 +16,12 @@
 <link href="https://cdn.theme.iastate.edu/nimbus-sans/css/nimbus-sans.css" rel="stylesheet">
 <link href="https://cdn.theme.iastate.edu/merriweather/css/merriweather.css" rel="stylesheet">
 <!-- <link href="css/iastate.legacy.min.css" rel="stylesheet"> // Include if your content requires legacy IASTATE theme CSS -->
-<link href="assets/css/iastate.min.css?v=2.0.16" rel="stylesheet">
+<link href="{{url}}/assets/css/iastate.min.css?v=2.0.16" rel="stylesheet">
+<link href="{{url}}/assets/css/iastate-panels.css" rel="stylesheet">
 <!-- <link href="css/site.css" rel="stylesheet" media="all"> // Site-specific CSS and theme overrides -->
 <link href="https://cdn.theme.iastate.edu/favicon/favicon.ico" rel="icon" type="image/x-icon">
 <link href="https://cdn.theme.iastate.edu/favicon/favicon.png" rel="icon" type="">
 <link href="https://cdn.theme.iastate.edu/favicon/apple-touch-icon.png" rel="icon">
 <script src="https://cdn.theme.iastate.edu/fontawesome/5.0/js/all.min.js"></script>
+<link href="{{url}}/assets/css/base.css" rel="stylesheet">
+
