--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,3 +1,7 @@
+---
+layout: compress
+---
+
 <!DOCTYPE html>
 <html lang="en">
 	<head>
@@ -6,9 +10,6 @@
 <body>
 
 {% include _navbar.html %}
-
-{% include _postnav.html %}
-
 
 <main role="main" id="main-content" class="">
 	<div class="container">
