Better Front Page

--- a/_includes/_carousel.html
+++ b/_includes/_carousel.html
@@ -48,6 +48,7 @@
   text-align: center;
   position: absolute;
   padding: 0;
+  background-color: #fafafa;
 }
 .carousel__controls,
 .carousel__activator {
@@ -88,7 +89,7 @@
   cursor: pointer;
   border-width: 5px 5px 0 0;
   border-style: solid;
-  border-color: #fafafa;
+  border-color: #000;
   opacity: 0.35;
   opacity: 1;
   outline: 0;
@@ -168,12 +169,13 @@
   width: 30px;
 }
 .carousel__indicator {
-  background-color: #fafafa;
+  background-color: #000;
 }
 {% for item in page.carousels[number].images %}
 .carousel__slide:nth-of-type({{ forloop.index }}),
 .carousel--thumb .carousel__indicators .carousel__indicator:nth-of-type({{ forloop.index }}) {
-  background-size: cover;
+  background-size: contain;
+  background-repeat:no-repeat;
   background-position: center;
 }
 {% endfor %}
