--- a/_layouts/frontpage.html
+++ b/_layouts/frontpage.html
@@ -12,28 +12,25 @@
 
 <main role="main" id="main-content" class="">
 		
-	<div class="jumbotron jumbotron-fluid" style="background-color: #F1BE48; padding-left: 30px; padding-right: 30px; align-items: center;">
-		<div class="row ">
-			<div class="col-md-6" >
-				{% include _carousel.html height="56" width="100" unit="%" duration="7" number="1" %}
+	<div class="jumbotron jumbotron-fluid" style="background-color: #F1BE48;">
+		<div class="row t60" >
+			{% for widget in page.widgets %}
+			<div class="col-md-4">
+				<a href="{{widget.url}}" class="thumbnail" style="background: transparent;">
+				<img src="{{ site.url }}{{ site.baseurl }}/images/{{widget.image}}" style="align-content: center; height: 35vh; width: auto;">
+				</a>
+				<a href="{{widget.url}}" class="thumbnail" style="text-align: center; background: transparent;"> <span class="label label-primary" style="font-size: x-large"> {{widget.title}} </span> </a>
 			</div>
-			<div class="col-md-6" >
-				{% include _news.html %}
-			</div>
+			{% endfor %}
 		</div>
 	</div>
 		
 	<div class="container container-fluid">
 		{% if page.widgets %}
-			<div class="jumbotron jumbotron-fluid">
-				{% for widget in page.widgets %}
-					<div class="col-md-4">
-						<a href="{{widget.url}}" class="thumbnail">
-						<img src="{{ site.url }}{{ site.baseurl }}/images/{{widget.image}}" style="align-content: center; height: 200px; width: auto;">
-						</a>
-						<a href="{{widget.url}}" class="thumbnail" style="text-align: center;"> <span class="label label-primary"> {{widget.title}} </span> </a>
-					</div>
-				{% endfor %}
+			<div class="jumbotron jumbotron-fluid" style=" padding-left: 30px; padding-right: 30px; margin-top: 30px; align-items: center;">
+				<div class="row ">
+					{% include _news.html %}
+				</div>		
 			</div>
 		{% endif %}
 	</div>
