Work in progress with newer carousel and updating the website

--- a/_includes/_footer.html
+++ b/_includes/_footer.html
@@ -73,3 +73,4 @@
 <script src="{{url}}/assets/js/vendor/bootstrap.min.js"></script>
 <script src="{{url}}/assets/js/vendor/bootstrap-submenu.min.js"></script>
 <script src="{{url}}/assets/js/iastate.js"></script>
+<script src="{{url}}/assets/js/carousel.js"></script>
