--- a/_layouts/frontpage.html
+++ b/_layouts/frontpage.html
@@ -2,6 +2,8 @@
 <html lang="en">
 	<head>
 		{% include _head.html %}
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
+		<link href="{{url}}/assets/css/carousels.css" media="all" rel="stylesheet">
 	</head>
 <body>
 
@@ -37,7 +39,7 @@
 </main>
 <!-- /main -->
 
-
+<script src="{{url}}/assets/js/jquery-1.11.3.min.js"></script>
 {% include _footer.html %}
 
 </body>
