adding the known people

--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -8,8 +8,8 @@
 } */
 
 #logobanner{
-    height: 78vh;
-    margin-top: 0%;
+/*    height: 78vh;
+*/    margin-top: 0%;
     margin-bottom: 0%;
     padding: 0%;
 }
