1. updated workshop page 2. updated tutorials page and upcoming tutorial page and news 3. updated journal club schedule 4. updated seminar schedule 5. updated news items

--- a/_includes/_head.html
+++ b/_includes/_head.html
@@ -24,4 +24,5 @@
 <link href="https://cdn.theme.iastate.edu/favicon/apple-touch-icon.png" rel="icon">
 <script src="https://cdn.theme.iastate.edu/fontawesome/5.0/js/all.min.js"></script>
 <link href="{{url}}/assets/css/base.css" rel="stylesheet">
+<link href="{{url}}/assets/css/workshop.css" rel="stylesheet">
 
