--- a/_includes/_footer.html
+++ b/_includes/_footer.html
@@ -14,9 +14,9 @@
     <section class="footer-contact col-sm-12 col-md-3">
         <p>
             <strong>{{site.title}}</strong><br>
-            <a href="https://goo.gl/maps/crXqjkTDkPte8Yfa8"> {{site.address}} </a>
+            <a href="https://goo.gl/maps/4MQMm3sWCeEwSuDt7"> {{site.address}} </a>
         </p>
-        <a href="mailto:soumiks@iastate.edu">soumiks@iastate.edu</a> <br>
+        <a href="mailto:trac@iastate.edu">trac@iastate.edu</a> <br>
 <a href="tel:"> phone</a>
     </section>
 
