--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -44,7 +44,7 @@ layout: default
 {% endfor %}
 
 
-<h2>Core Team</h2>
+<!-- <h2>Core Team</h2>
 
 {% assign core_list = site.data.people.core_team | sort: "name"  %}
 
@@ -67,7 +67,7 @@ layout: default
 
 {% endfor %}
 
-
+ -->
 <br>
 
 <h2>Other Team Members</h2>
