changed member.webpage to member.website
This change will redirect the user to the member's website. Previously, it kept the user on the same page.

--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -91,7 +91,7 @@ layout: default
     <img src="{{ site.url }}{{ site.baseurl }}/images/members/avatar.jpg" class="img" width="100px"
       style="padding: 10px; float: left" />
     {% endif %}
-    <h4><a href="{{member.webpage}}">{{ member.name }}</a></h4>
+    <h4><a href="{{member.website}}">{{ member.name }}</a></h4>
     <p><a href="tomail:{{member.email}}">{{ member.email }}</a></p>
     <br>
     <ul style="list-style-type: none">
@@ -134,7 +134,7 @@ layout: default
     <img src="{{ site.url }}{{ site.baseurl }}/images/members/avatar.jpg" class="img" width="100px"
       style="padding: 10px; float: left" />
     {% endif %}
-    <h4><a href="{{member.webpage}}">{{ member.name }}</a></h4>
+    <h4><a href="{{member.website}}">{{ member.name }}</a></h4>
     <p><a href="tomail:{{member.email}}">{{ member.email }}</a></p>
     <br>
     <ul style="list-style-type: none">
