--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -115,7 +115,7 @@ layout: default
 {% endif %}
 </div>
 <br>
-<div id="team_members">
+<div id="staff_members">
 <h2>Other Team Members</h2>
 
 {% assign member_list = site.data.people.team | sort: "name"  %}
