--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -115,8 +115,8 @@ layout: default
 {% endif %}
 </div>
 <br>
-<div id="staff_members">
-<h2>Other Team Members</h2>
+<div id="faculty_experts">
+<h2>Faculty Experts</h2>
 
 {% assign member_list = site.data.people.team | sort: "name"  %}
 
