tomail to mailto

--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -20,7 +20,7 @@ layout: default
   <img src="{{ site.url }}{{ site.baseurl }}/images/members/{{ member.photo }}" class="img-responsive" width="25%"
     style="padding: 10px; float: left" />
   <h4><a href="{{member.webpage}}">{{ member.name }}</a></h4>
-  <p><a href="tomail:{{member.email}}">{{ member.email }}</a></p>
+  <p><a href="mailto:{{member.email}}">{{ member.email }}</a></p>
   <ul style="list-style-type:none">
     <li> {{ member.description }} </li>
   </ul>
@@ -35,7 +35,7 @@ layout: default
   <img src="{{ site.url }}{{ site.baseurl }}/images/members/{{ member.photo }}" class="img-responsive" width="25%"
     style="padding: 10px; float: left" />
   <h4><a href="{{member.webpage}}">{{ member.name }}</a></h4>
-  <p><a href="tomail:{{member.email}}">{{ member.email }}</a></p>
+  <p><a href="mailto:{{member.email}}">{{ member.email }}</a></p>
   <ul style="list-style-type:none">
     <li> {{ member.description }} </li>
   </ul>
@@ -93,7 +93,7 @@ layout: default
       style="padding: 10px; float: left" />
     {% endif %}
     <h4><a href="{{member.website}}">{{ member.name }}</a></h4>
-    <p><a href="tomail:{{member.email}}">{{ member.email }}</a></p>
+    <p><a href="mailto:{{member.email}}">{{ member.email }}</a></p>
     <br>
     <ul style="list-style-type: none">
       <li> <b>Thrust Area:</b> {{ member.thrust_area }} </li>
@@ -138,7 +138,7 @@ layout: default
       style="padding: 10px; float: left" />
     {% endif %}
     <h4><a href="{{member.website}}">{{ member.name }}</a></h4>
-    <p><a href="tomail:{{member.email}}">{{ member.email }}</a></p>
+    <p><a href="mailto:{{member.email}}">{{ member.email }}</a></p>
     <br>
     <ul style="list-style-type: none">
       <li> <b>Thrust Area:</b> {{ member.thrust_area }} </li>
