--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -1,13 +1,13 @@
 ---
 layout: default
 ---
-
+<div style="text-align: center;"><h1>Translational AI Center</h1></div>
 <div style="margin-top: 5vh; padding: 20px; text-align:justify">
   {{content}}
 </div>
 
 <div style="padding: 10px;">
-  <h1>Members of Translational AI Center</h1>
+  <h1>Leaders</h1>
 </div>
 
 
