--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -96,8 +96,7 @@ layout: default
     <p><a href="mailto:{{member.email}}">{{ member.email }}</a></p>
     <br>
     <ul style="list-style-type: none">
-      <li> <b>Thrust Area:</b> {{ member.thrust_area }} </li>
-      <li> <b>Research Interests:</b> {{ member.research_interests }}<br> </li>
+      <li> <b>Designation:</b> {{ member.designation }} </li>
     </ul>
   </div>
 
