added thrust areas

--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -140,7 +140,7 @@ layout: default
     <p><a href="mailto:{{member.email}}">{{ member.email }}</a></p>
     <br>
     <ul style="list-style-type: none">
-      <li> <b>Thrust Area:</b> {{ member.thrust_area }} </li>
+      <li> <b>Thrust Area:</b> {{ member.thrust_areas }} </li>
     </ul>
   </div>
 
