opportunities and events

--- a/_layouts/frontpage.html
+++ b/_layouts/frontpage.html
@@ -32,7 +32,13 @@
 			<div class="jumbotron jumbotron-fluid" style=" padding-left: 30px; padding-right: 30px; margin-top: 30px; align-items: center;">
 				<div class="row ">
 					{% include _news.html %}
-				</div>		
+				</div>
+				<div class="row">
+					{% include _events.html %}
+				</div>
+				<div class="row">
+					{% include _opportunities.html %}
+				</div>
 			</div>
 		{% endif %}
 	</div>
