opportunities and events

--- a/_includes/_events.html
+++ b/_includes/_events.html
@@ -7,7 +7,7 @@
         <p>{{ article.headline }}</p>
         {% endfor %}
 
-        <h4><a href="{{ site.url }}{{ site.baseurl }}/events.html">... see all News</a></h4>
+        <h4><a href="{{ site.url }}{{ site.baseurl }}/events.html">... see all Events</a></h4>
 
     </div>
 </div>
