--- a/_includes/_opportunities.html
+++ b/_includes/_opportunities.html
@@ -9,7 +9,7 @@
 <!--        {% endfor %}-->
 
 
-        <h4><a href="{{ site.url }}{{ site.baseurl }}/Resources/opportunities">... see all Opportunities</a></h4>
+        <h4><a href="{{ site.url }}{{ site.baseurl }}/Resources/opportunities.html">... see all Opportunities</a></h4>
 
 
     </div>
