Pre-Award resources

--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -82,7 +82,7 @@ layout: default
 {% assign even_odd = number_printed | modulo: 2 %}
 
 {% if even_odd == 0 %}
-<div class="row">
+<div class="row rowSmallScreen">
   {% endif %}
 
   <div class="col-md-6" style="text-align:justify">
@@ -126,7 +126,7 @@ layout: default
 {% assign even_odd = number_printed | modulo: 2 %}
 
 {% if even_odd == 0 %}
-<div class="row">
+<div class="row rowSmallScreen">
   {% endif %}
 
   <div class="col-md-6" style="text-align:justify">
