--- a/_includes/_head.html
+++ b/_includes/_head.html
@@ -25,4 +25,5 @@
 <script src="https://cdn.theme.iastate.edu/fontawesome/5.0/js/all.min.js"></script>
 <link href="{{url}}/assets/css/base.css" rel="stylesheet">
 <link href="{{url}}/assets/css/workshop.css" rel="stylesheet">
+<link href="{{url}}/assets/css/about.css" rel="stylesheet">
 
