--- a/assets/css/about.css
+++ b/assets/css/about.css
@@ -1,8 +1,8 @@
-@media only screen and (max-width: 991px) {
-    .rowSmallScreen{
-        display: flex;
-        flex-direction: column;
+/*@media only screen and (max-width: 991px) {*/
+/*    .rowSmallScreen{*/
+/*        display: flex;*/
+/*        flex-direction: column;*/
 
 
-    }
-}
+/*    }*/
+/*}*/
