--- a/assets/css/workshop.css
+++ b/assets/css/workshop.css
@@ -92,3 +92,12 @@ span.award-other img {
   padding-top: 0;
   padding-bottom: 8px;
 }
+
+@media only screen and (max-width: 991px) {
+    .rowSmallScreen{
+        display: flex;
+        flex-direction: column;
+
+
+    }
+}
