--- a/_layouts/events.html
+++ b/_layouts/events.html
@@ -13,10 +13,7 @@ layout: compress
 
 <main role="main" id="main-content" class="">
     <div class="container">
-<!--            <iframe width="1217" height="685" src="https://www.youtube.com/embed/0W-9glRSF6M" title="#7 Texas vs #12 Iowa State Basketball Game Highlights 1 17 2023" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>-->
-<!--            <iframe src="https://calendar.google.com/calendar/embed?height=600&wkst=1&bgcolor=%23ffffff&ctz=America%2FChicago&src=ODUzZDhlYjI5OWE2NmQ4OGYyZTQ3ODFiNTM2MzgxYzZjMmE5N2NjYmFmYWMzNmI1OTUxZDIyZTgzODQxMzY3NEBncm91cC5jYWxlbmRhci5nb29nbGUuY29t&color=%23F09300" style="left: 0px !important; position: unset" width="800" height="600"></iframe>-->
-            <iframe src="https://calendar.google.com/calendar/embed?height=600&wkst=1&bgcolor=%23ffffff&ctz=America%2FChicago&mode=WEEK&src=ODUzZDhlYjI5OWE2NmQ4OGYyZTQ3ODFiNTM2MzgxYzZjMmE5N2NjYmFmYWMzNmI1OTUxZDIyZTgzODQxMzY3NEBncm91cC5jYWxlbmRhci5nb29nbGUuY29t&color=%23F09300" style="border:solid 1px #777; position: relative" width="100%" height="600" frameborder="0" scrolling="no"></iframe>
-<!--        <iframe src="https://calendar.google.com/calendar/embed?height=600&wkst=1&bgcolor=%23ffffff&ctz=America%2FChicago&src=ODUzZDhlYjI5OWE2NmQ4OGYyZTQ3ODFiNTM2MzgxYzZjMmE5N2NjYmFmYWMzNmI1OTUxZDIyZTgzODQxMzY3NEBncm91cC5jYWxlbmRhci5nb29nbGUuY29t&color=%23F09300" style="border:solid 1px #777; left:0px !important;" width="800" height="600" frameborder="0" scrolling="no"></iframe>-->
+        <iframe src="https://calendar.google.com/calendar/embed?height=600&wkst=2&bgcolor=%23ffffff&ctz=America%2FChicago&mode=MONTH&showTz=0&showTabs=1&showPrint=0&showNav=1&showTitle=0&showDate=0&showCalendars=0&src=ODUzZDhlYjI5OWE2NmQ4OGYyZTQ3ODFiNTM2MzgxYzZjMmE5N2NjYmFmYWMzNmI1OTUxZDIyZTgzODQxMzY3NEBncm91cC5jYWxlbmRhci5nb29nbGUuY29t&color=%23F09300" style="border-width:0" width="100%" height="600" frameborder="0" scrolling="no"></iframe>
     </div>
 </main>
 
