Core and calender

--- a/_layouts/research.html
+++ b/_layouts/research.html
@@ -60,7 +60,7 @@ format: research
 				</header>
 				<a href="#" class="image fit"><img src="{{ site.url }}{{ site.baseurl }}/images/foodenergywater.png" alt="" /></a>
 				<p>Food, Energy & Water</p>
-				<a href="foodenergywater/" class="button" style="float: center">More details</a>
+				<a href="few/" class="button" style="float: center">More details</a>
 				
 			</article>
 			<article>
@@ -70,7 +70,7 @@ format: research
 				<a href="#" class="image fit"><img src="{{ site.url }}{{ site.baseurl }}/images/healthcare.png" alt="" /></a>
 				<p>Health & Quality of Life</p>
 				<ul class="actions special">
-					<li><a href="healthcare/" class="button" style="float: center" > More details</a></li>
+					<li><a href="hql/" class="button" style="float: center" > More details</a></li>
 				</ul>
 			</article>
 		</section>
