--- a/_layouts/seminars.html
+++ b/_layouts/seminars.html
@@ -7,7 +7,6 @@ format: seminars
 {% assign all_talks = site.data.seminars | reverse %}
 {% assign past_talks = all_talks | shift %}
 {% assign upcoming_talks = all_talks | first %}
-
 <h1> TrAC Weekly Seminar Series </h1>
 
 <p>
@@ -15,7 +14,11 @@ format: seminars
 </p>
 
 <h2> Upcoming Talks </h2>
-
+<main role="main" id="main-content" class="">
+	<div class="container">
+		<iframe src="https://calendar.google.com/calendar/embed?height=600&wkst=1&bgcolor=%23ffffff&ctz=America%2FChicago&showTz=0&showTitle=0&showNav=1&showDate=1&showPrint=0&showTabs=0&showCalendars=1&src=YWU2ZTQ1NTAzOWViYWE3OTEwNjAxZjQ3MzFkZDBiMDE5YTVjMDY0ZWUyYWZhZmI2YjAzNTY0NjFmMTE0MDUxOUBncm91cC5jYWxlbmRhci5nb29nbGUuY29t&color=%23A79B8E" style="border:solid 1px #777" width="800" height="600" frameborder="0" scrolling="no"></iframe>
+	</div>
+</main>
 <div class="row" style="padding:20px">
 	<div class="panel" style="border-color: #84e45ebf;">
 		<div class="panel-heading" style="background-color: #84e45ebf;">
@@ -41,40 +44,4 @@ format: seminars
 	</div>
 </div>
 
-
-<h2> Past Talks </h2>
-
-
-<div class="row t60" style="padding:20px">
-	{% for item in  past_talks %}
-		<div class="panel">
-			<div class="panel-heading">
-				<div class="label"> <span class="label label-primary"> {{item.date}} </span>  </div>
-			</div> <!-- panel-heding -->
-			<div class="panel-body">
-				<div class="row">
-					<div class="col-md-4">
-						<h4> {{ item.Presenter }}</h4>
-						<h5>{{ item.Affiliation }}</h5>
-						<!-- <embed src="{{ site.url }}assets/seminar-flyers/{{item.flyer}}" width="500" height="375"  type="application/pdf"> -->
-					</div> <!-- column -->
-					<div class="col-md-8" style="padding:10px">
-						{% if item.video or item.flyer %}
-							{% if item.video %}
-							<div class="responsive-embed" >
-								<iframe width="100%" height="315" src="{{item.video}}" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-							</div>
-							{% else %}
-							<div class="responsive-embed" >
-								<embed src="{{ site.url }}/{{site.baseurl}}/seminar-flyers/{{item.flyer}}" width="100%" height="375"  type="application/pdf">
-							</div>
-							{% endif %}
-						{% else %}
-							<p> No media to show </p>
-						{% endif %}
-					</div>
-				</div> <!-- row -->
-			</div> <!-- panel-body -->
-		</div> <!-- panel -->
-	{% endfor %}
-</div>
+For information on past seminars, please click <a href="{{ site.url }}{{ site.baseurl }}/Activities/seminars/past">here</a>.
