--- a/_layouts/seminarsPast.html
+++ b/_layouts/seminarsPast.html
@@ -5,8 +5,7 @@ format: seminars
 
 
 {% assign all_talks = site.data.seminars | reverse %}
-{% assign past_talks = all_talks | shift %}
-{% assign upcoming_talks = all_talks | first %}
+{% assign past_talks = all_talks %}
 <h1> TrAC Weekly Seminar Series </h1>
 
 <p>
